--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bunyan": "^1.4.0",
+    "express-bunyan-logger": "^1.1.1",
     "mongoose": "^4.0.5"
   }
 }
