--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/livio/seedio-log"
+  },
   "author": "Livio",
   "license": "ISC",
   "dependencies": {
