--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Provides a generic interface for logging.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,8 @@
     "colors": "^1.1.2",
     "express-bunyan-logger": "^1.1.1",
     "mongoose": "^4.0.5"
+  },
+  "devDependencies": {
+    "mocha": "^2.3.3"
   }
 }
